--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RideMe</string>
+    <string name="current_ride">Current Ride</string>
+    <string name="previous_rides">Previous Rides</string>
+    <string name="settings">Settings</string>
 </resources>
